syntax = "proto3";

import "google/api/annotations.proto";

package api;

service Poet {
    /**
    Start is used to start the service.
    */
    rpc Start (StartRequest) returns (StartResponse) {
        option (google.api.http) = {
            post: "/v1/start",
            body: "*",
        };
    }

    /**
    UpdateGateway allows to update the list of gateway addresses (with additional broadcasting config),
    similar to the Start rpc, but after the service already started.
    */
    rpc UpdateGateway (UpdateGatewayRequest) returns (UpdateGatewayResponse) {
        option (google.api.http) = {
            post: "/v1/updategateway",
            body: "*",
        };
    }

    /**
    Submit adds a challenge to the service's current open round,
    to be included its later generated proof.
    */
    rpc Submit (SubmitRequest) returns (SubmitResponse) {
        option (google.api.http) = {
            post: "/v1/submit",
            body: "*",
        };
    }

    /**
    GetInfo returns general information concerning the service,
    including its identity pubkey.
    */
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse) {
        option (google.api.http) = {
            get: "/v1/info"
        };
    }
}

message StartRequest {
    repeated string gatewayAddresses = 1;
    bool disableBroadcast = 2;
    int32 connAcksThreshold = 3;
    int32 broadcastAcksThreshold = 4;
}

message StartResponse {
}

message UpdateGatewayRequest {
    repeated string gatewayAddresses = 1;
    bool disableBroadcast = 2;
    int32 connAcksThreshold = 3;
    int32 broadcastAcksThreshold = 4;
}

message UpdateGatewayResponse {
}

message SubmitRequest {
    bytes challenge = 1;
    bytes signature = 2;
}

message SubmitResponse {
    string roundId = 1;
    bytes hash = 2;
}

message GetInfoRequest {
}

message GetInfoResponse {
    string openRoundId = 1;
    repeated string executingRoundsIds = 2;
    bytes servicePubKey = 3;
}

message MembershipProof {
    int32 index = 1;
    bytes root = 2;
    repeated bytes proof = 3;
}

message PoetProof {
    bytes phi = 1;
    repeated bytes provenLeaves = 2;
    repeated bytes proofNodes = 3;
}
